se aplico metodologia BEM, en el navbar

--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 </head>
 <body>
 <header class="navbar">
-<nav>
-    <ul class="nav-list">
-    <li><a href="#">Home</a></li>
-    <li><a href="#">Services</a></li>
-    <li><a href="#">About Us</a></li>
-    <li><a href="#">Appointment</a></li>
-    <li><a href="#">Contact</a></li>
+<nav class="navbar__nav">
+    <ul class="navbar__list">
+    <li class="navbar__item"><a class="navbar__link navbar__link--active" href="#">Home</a></li>
+    <li class="navbar__item"><a class="navbar__link" href="#">Services</a></li>
+    <li class="navbar__item"><a class="navbar__link" href="#">About Us</a></li>
+    <li class="navbar__item"><a class="navbar__link" href="#">Appointment</a></li>
+    <li class="navbar__item"><a class="navbar__link" href="#">Contact</a></li>
     </ul>
-    <div class="contact-phone">
-    <img src="img/telefono.png" class="telefono"> 
-    <h3 class="number">(+605) 1234-56789</h3>
+    <div class="navbar__phone">
+    <img src="img/telefono.png" class="navbar__icon"> 
+    <h3 class="navbar__number">(+605) 1234-56789</h3>
     </div>
 </nav>
 </header>
