metodologia BEM, aoplicada en el sidebar

--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
 </nav>
 </header>
 
-<div class="barlateralizq">
-<ul class="arriba">
-    <li><img src="img/casa.png" alt="Home"></li>
+<aside class="sidebar">
+<ul class="sidebar__top">
+    <li class="sidebar__icon"><img src="img/casa.png" alt="Home"></li>
 </ul>
-<ul class="abajo">
-    <li><img src="img/twitter.png" alt="Twitter"></li>
-    <li><img src="img/facebook.png" alt="Facebook"></li>
-    <li><img src="img/instagram.png" alt="Instagram"></li>
-    <li><img src="img/youtube.png" alt="YouTube"></li>
+<ul class="sidebar__bottom">
+    <li class="sidebar__icon"><img src="img/twitter.png" alt="Twitter"></li>
+    <li class="sidebar__icon"><img src="img/facebook.png" alt="Facebook"></li>
+    <li class="sidebar__icon"><img src="img/instagram.png" alt="Instagram"></li>
+    <li class="sidebar__icon"><img src="img/youtube.png" alt="YouTube"></li>
 </ul>
-</div>
+</aside>
 
 <main class="container">
 <div class="izquierda">
