se agrego metodologia BEM a los apartados de container, botones, secciones izquierda y derecha

--- a/index.html
+++ b/index.html
@@ -36,34 +36,34 @@
 </aside>
 
 <main class="container">
-<div class="izquierda">
-    <img src="img/dentista.png" alt="Dentist" class="img-dentista" />
-    <h1>Full Dedicated To Your <br>
+<section class="left__content">
+    <img src="img/dentista.png" alt="Dentist" class="content__image" />
+    <h1 class="content__title">Full Dedicated To Your <br>
     <span>Dental Health.</span> </h1>
-    <p>
+    <p class="content__text">
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo dolor ad, a omnis minima vitae saepe incidunt, ipsam ratione minus aliquam, voluptas animi odio.
-
     </p>
-    <div class="buttons">
-        <button class="btnprimary">Book now ▶</button>
-        <button class="btnsecondary">Read more ▶</button>
-    </div>
-</div>
+    <div class="content__buttons">
+        <button class="content__button content__button--primary">Book now ▶</button>
+        <button class="content__button content__button--secondary">Read more ▶</button>
 
-<div class="derecha">
-    <h2>Book an Appointment</h2>
+    </div>
+</section>
+
+<div class="right__form">
+    <h2 class="form__title">Book an Appointment</h2>
     <form>
     <div class="form-group">
-        <input type="text" placeholder="Your first name*" class="half" />
-        <input type="text" placeholder="Your last name*" class="half" />
+        <input type="text" placeholder="Your first name*" class="input_first" />
+        <input type="text" placeholder="Your last name*" class="input_last" />
     </div>
-    <input type="email" placeholder="Your email address*" />
-    <input type="tel" placeholder="Your contact no*" />
+    <input type="email" placeholder="Your email address*" class="input_email" />
+    <input type="tel" placeholder="Your contact no*" class="input_tel" />
     <div class="form-group">
-        <input type="date" class="half" />
-        <input type="time" class="half" />
+        <input type="date" class="input_date" />
+        <input type="time" class="input_time" />
     </div>
-    <button type="submit" class="btn btn-primary">Book now ▶</button>
+    <button type="submit" class="content__buttons content__button--primary">Book now ▶</button>
     </form>
 </div>
 </main>
